announcementregister-screen align fix

--- a/announcementregister-screen/style/style.css
+++ b/announcementregister-screen/style/style.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
     padding: 0;
     font-size: 18px;
-    margin-bottom: 10px;
     display: block;
 }
 
@@ -46,23 +45,21 @@ body {
 .endereco {
     display: inline-block;
     width: 75%;
-    margin-top: 5%;
     padding: 10px;
     border: 1px solid #D9D9D9;
     background-color: #D9D9D9;
     border-radius: 20px;
-    margin-left: 4%;
+    margin-top: 4%;
 }
 
 .number {
     display: inline-block;
     width: 10%;
-    margin-top: 5%;
+    margin-top: 4%;
     padding: 10px;
     border: 1px solid #D9D9D9;
     background-color: #D9D9D9;
     border-radius: 20px;
-    margin-left: 4%;
 }
 
 .city {
@@ -73,7 +70,6 @@ body {
     background-color: #D9D9D9;
     border-radius: 20px;
     margin-top: 4%;
-    margin-left: 4%;
 }
 
 .state {
@@ -113,6 +109,18 @@ body {
     transition: all 0.3s ease;
 }
 
+.mainAlign {
+    margin-bottom: 5rem;
+}
+
+.firstLabel {
+    display: flex;
+    justify-content: center;
+    font-weight: 600;
+    font-size: 1.5em;
+    margin-top: 4rem;
+}
+
 cepbotao:hover {
     background-color: #45a049;
 }
@@ -125,7 +133,7 @@ cepbotao:hover {
 
 
 .titulo {
-    width: 45%;
+    width: 40%;
     padding: 10px;
     border: 1px solid #D9D9D9;
     background-color: #D9D9D9;
@@ -254,6 +262,8 @@ button:hover {
     display: flex;
     justify-content: space-between;
     margin-top: 4%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 
@@ -296,15 +306,13 @@ button:hover {
 .sideToSide {
     display: flex;
     gap: 30%;
-    margin-right: 5%;
-    margin-left: 1%;
 }
 
 .sideToSide2 {
     display: flex;
-    gap: 5%;
-    margin-right: 12%;
-    margin-left: 1%;
+    justify-content: space-between;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .image-placeholder {
